# Warehouse-Delivery

./: .gitignore  .gitmodules  Dockerfile  README.md  setup_simulation_test.sh  spawn_headless.sh
.github/workflows/: ros-melodic-tests.yml
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/hector_gazebo_plugins/: SetBiasRequest.h  SetBiasResponse.h
devel/include/hector_moveit_actions/: ExecuteDroneTrajectoryAction.h  ExecuteDroneTrajectoryActionFeedback.h  ExecuteDroneTrajectoryActionGoal.h  ExecuteDroneTrajectoryActionResult.h  ExecuteDroneTrajectoryFeedback.h  ExecuteDroneTrajectoryGoal.h  ExecuteDroneTrajectoryResult.h
devel/include/hector_uav_msgs/: Altimeter.h  AttitudeCommand.h  Compass.h  ControllerState.h  EnableMotorsRequest.h  EnableMotorsResponse.h  HeadingCommand.h  HeightCommand.h  LandingAction.h  LandingActionFeedback.h  LandingActionGoal.h  LandingActionResult.h  LandingFeedback.h  LandingGoal.h  LandingResult.h  MotorCommand.h  MotorPWM.h  MotorStatus.h  PoseAction.h  PoseActionFeedback.h  PoseActionGoal.h  PoseActionResult.h  PoseFeedback.h  PoseGoal.h  PoseResult.h  PositionXYCommand.h  RC.h  RawImu.h  RawMagnetic.h  RawRC.h  RuddersCommand.h  ServoCommand.h  Supply.h  TakeoffAction.h  TakeoffActionFeedback.h  TakeoffActionGoal.h  TakeoffActionResult.h  TakeoffFeedback.h  TakeoffGoal.h  TakeoffResult.h  (+4 more)
devel/lib/hector_moveit_actions/: trajectory_controller
devel/lib/hector_moveit_config/: keyboard_teleop
devel/lib/hector_moveit_exploration/: hector_explorer
devel/lib/hector_pose_estimation/: pose_estimation
devel/lib/hector_quadrotor_actions/: landing_action  pose_action  takeoff_action
devel/lib/hector_quadrotor_pose_estimation/: hector_quadrotor_pose_estimation
devel/lib/hector_quadrotor_teleop/: quadrotor_teleop
devel/lib/message_to_tf/: message_to_tf
devel/lib/pkgconfig/: hector_gazebo_plugins.pc  hector_gazebo_worlds.pc  (+27 more)
drone-software/: setup_dependencies.py
drone-software/scripts/: manual_spawn_env.sh  spawn_headless.sh  start_tests.sh
drone-software/src/warehouse_delivery_bridge/: CMakeLists.txt  package.xml
drone-software/src/warehouse_delivery_bridge/msg/: DeliveryStatus.msg
drone-software/src/warehouse_delivery_bridge/src/: run_web_bridge.py
scripts/: manual_spawn_env.sh  start_tests.sh
src/hector_moveit_exploration/: CMakeLists.txt  package.xml
web/backend/: pom.xml
(+143 files in other folders)
