<?xml version="1.0"?>
<package format="2">
  <name>warehouse_delivery_bridge</name>
  <version>0.0.0</version>
  <description>The warehouse_delivery_bridge package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="john@todo.todo">john</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>warehouse_delivery</build_depend>
  <exec_depend>warehouse_delivery</exec_depend>
  <exec_depend>python_requests</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
